Fixed Ability Data actor section's grammar

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 <p>The effect data is also fairly obvious, using a similar name to our ability, <code>Marine - Stim Pack (Apply Buff)</code>.</p>
                 <p>The behavior data is again similar to the ability name, <code>Marine - Stimpack</code>.</p>
                 <p>There is also a button that you can duplicate called <code>Use Stimpack</code> if you want to change the button's text, name, or hotkey.</p>
-                <p>StimPack actually has three pieces of actor data that we would want to duplicate. <code>Stimpack End Impact</code>, <code>Stimpack Start Impact</code> around model actors and <code>Marine_Stimpack</code> is a sound actor.</p>
+                <p>StimPack actually has three pieces of actor data that we would want to duplicate. <code>Stimpack End Impact</code> and <code>Stimpack Start Impact</code> are model actors while <code>Marine_Stimpack</code> is a sound actor.</p>
                 <p>Stimpack is associated with an upgrade that must be researched to unlock it. There are many ways to handle this. The easiest would be to ignore it, and the ability will only be accessible when you unlock the stimpack upgrade. If you want it to always be available, you could remove the requirement from the <em>ability data</em>'s <code>Commands</code>' <code>Execute</code> field. Or you could create a new upgrade and requirement, but that's beyond the scope of this tutorial.</p>
                 <div id="ability-models" class="disabledElement">
                     <h3>Ability Models <a class="returnLink" href="#">^</a></h3>
